src/objects/Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_End_Date__c</fullName>
        <formula>Rate__r.Agreement__r.Valid_Through__c</formula>
        <label>Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assignment_Type__c</fullName>
        <globalPicklist>Assignment_Type</globalPicklist>
        <label>Assignment Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Automatically_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatically Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Billable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Rate</label>
        <referenceTo>Rate__c</referenceTo>
        <relationshipLabel>Assignments (Cost Rate)</relationshipLabel>
        <relationshipName>Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Portal_User_Flag__c</fullName>
        <formula>AND(
  NOT(ISBLANK(Resource__r.Portal_User__c)),
  Resource__r.Portal_User__r.Id = $User.Id
)</formula>
        <label>Current Portal User Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send_Feedback_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Send Feedback Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expert_Account_Name__c</fullName>
        <formula>Resource__r.Account.Name</formula>
        <label>Expert Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_Budget_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Budget Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_Variance_to_Plan__c</fullName>
        <formula>IF(
  AND(
    NOT(ISBLANK(Planned_Hours__c))
  ),
  Planned_Hours__c - Total_Number_of_Hours__c,
  null
)</formula>
        <label>Hours Variance to Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin_Billable_Amount_Rollup__c</fullName>
        <label>Margin Billable Amount Rollup</label>
        <summarizedField>Time_Entry__c.Margin_Billable_Amount__c</summarizedField>
        <summaryForeignKey>Time_Entry__c.Assignment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Margin_Cost_Amount_Rollup__c</fullName>
        <label>Margin Cost Amount Rollup</label>
        <summarizedField>Time_Entry__c.Margin_Cost_Amount__c</summarizedField>
        <summaryForeignKey>Time_Entry__c.Assignment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <formula>Profit_Margin__c  /  Margin_Billable_Amount_Rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_External_Id__c</fullName>
        <formula>Resource__r.Partner_External_Id__c</formula>
        <label>Partner External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Allocated__c</fullName>
        <label>Percent Allocated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Planned_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Planned Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profit_Margin__c</fullName>
        <formula>Margin_Billable_Amount_Rollup__c  -  Margin_Cost_Amount_Rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billable Rate</label>
        <referenceTo>Rate__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recalculate_Sharing_on_Save__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate Sharing on Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_Mismatch__c</fullName>
        <formula>NOT(
  AND(
    TEXT(Resource__r.Region_Picklist__c) = TEXT(Resource__r.Account.Region_Picklist__c),
    TEXT(Resource__r.Region_Picklist__c) = TEXT(Rate__r.Region__c),
    TEXT(Rate__r.Region__c) = TEXT(Cost_Rate__r.Region__c)
  )
)</formula>
        <label>Region Mismatch?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region used from global value set &apos;Region&apos;</description>
        <globalPicklist>Region</globalPicklist>
        <label>Region</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resource_Name__c</fullName>
        <formula>Resource__r.FirstName + &apos; &apos; + Resource__r.LastName</formula>
        <label>Expert Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Expert</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <globalPicklist>Role</globalPicklist>
        <label>Role</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Projected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Amount__c</fullName>
        <label>Total Billable Amount</label>
        <summarizedField>Time_Entry__c.Total_Billable_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Entry__c.Total_Goodwill_Amount__c</field>
            <operation>equals</operation>
            <value>, 0</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Entry__c.Assignment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Budget__c</fullName>
        <label>Total Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Amount__c</fullName>
        <label>Total Cost Amount</label>
        <summarizedField>Time_Entry__c.Total_Cost_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Entry__c.Total_Goodwill_Amount__c</field>
            <operation>equals</operation>
            <value>, 0</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Entry__c.Assignment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Hours__c</fullName>
        <label>Total Number of Hours</label>
        <summarizedField>Time_Entry__c.Hours__c</summarizedField>
        <summaryForeignKey>Time_Entry__c.Assignment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Resource_Name__c</columns>
        <columns>Assignment_Type__c</columns>
        <columns>Project__c</columns>
        <columns>Role__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Assignment_Updates_Availability</fullName>
        <booleanFilter>1 AND (2 OR 3  OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Status__c</columns>
        <columns>Do_Not_Send_Feedback_Survey__c</columns>
        <columns>Resource_Name__c</columns>
        <columns>Planned_Hours__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Projected,Active</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Planned_Hours__c</field>
            <operation>equals</operation>
        </filters>
        <label>Assignment Updates - Availability</label>
        <sharedTo>
            <group>X10K_Executive_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Assignments_with_Negative_Variance</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Resource_Name__c</columns>
        <columns>Role__c</columns>
        <columns>Total_Number_of_Hours__c</columns>
        <columns>Hours_Variance_to_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hours_Variance_to_Plan__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Assignments with Negative Variance</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Assignments_Active</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Role__c</columns>
        <columns>Assignment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Portal_User_Flag__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>My Assignments - Active</label>
    </listViews>
    <listViews>
        <fullName>My_Assignments_Closed</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Role__c</columns>
        <columns>Assignment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Portal_User_Flag__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>My Assignments - Closed</label>
    </listViews>
    <listViews>
        <fullName>My_Assignments_Projected</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Role__c</columns>
        <columns>Assignment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Portal_User_Flag__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Projected</value>
        </filters>
        <label>My Assignments - Projected</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <recordTypes>
        <fullName>Assignment</fullName>
        <active>true</active>
        <label>Assignment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Billable_Rate_Change_If_No_TimeEntries</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Total_Number_of_Hours__c &gt; 0,ISCHANGED( Rate__c ), false)</errorConditionFormula>
        <errorDisplayField>Rate__c</errorDisplayField>
        <errorMessage>Time has already been logged against Assignment, so you cannot change the Billable Rate. Please create a new Assignment instead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cost_Rate_Change_If_No_TimeEntries</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Total_Number_of_Hours__c &gt; 0,ISCHANGED( Cost_Rate__c ), false)</errorConditionFormula>
        <errorDisplayField>Cost_Rate__c</errorDisplayField>
        <errorMessage>Time has already been logged against Assignment, so you cannot change the Cost Rate. Please create a new Assignment instead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_is_later_than_the_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(ISBLANK(Start_Date__c)), 
NOT(ISBLANK(End_Date__c)), 
Start_Date__c &gt; End_Date__c
)</errorConditionFormula>
        <errorMessage>The Assignment&apos;s End Date should be later than Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_End_Date_Cannot_More_Than_Two_Year</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
  AND(
    NOT(ISBLANK(End_Date__c)),
    NOT(ISBLANK(Start_Date__c))
  ),
  End_Date__c - Start_Date__c &gt; 730,
  false
)</errorConditionFormula>
        <errorMessage>An Assignment can only be scheduled for a maximum of 2 years.</errorMessage>
    </validationRules>
</CustomObject>